# study_ziplistmap

./: LICENSE  README.md
redis_source_annotation-master/: ziplist.h
redis_source_annotation-master/redis-3.2.8/src/: CMakeLists.txt  h7_redis.hpp  lzf_c.c  quicklist.h  redisassert.h  rio.h  ziplist.c  ziplist.h  zipmap.h  zmalloc.h
redis_source_annotation-master/redis-3.2.8/src/h7/: ByteBufferIO.h  CompressManager.cpp  CompressManager.h  DNACompressManager.cpp  DNACompressManager.h  Fastqs.cpp  Fastqs.h  FileIO.h  Huffman.cpp  Huffman.h  JudyList.cpp  JudyList.h  QuickList.cpp  QuickList.h  SkipList.cpp  SkipList.h  ZipList.cpp  ZipList.h  ZipMap.cpp  ZipMap.h  ZstdUtil.h  _utils.h  c_common.h  common.h  fasta.hpp  hash.c  judy_arrays.c  judy_arrays.h  main.cpp  test_JudyList.cpp  test_buffer_io.cpp  test_compressor.cpp  test_fq_compress.cpp  test_ziplist.cpp
redis_source_annotation-master/redis-3.2.8/src/quip/: CMakeLists.txt
redis_source_annotation-master/redis-3.2.8/src/quip/fqc/: ByteBufferIO.h  CountDownLatch.h  DNACompressManager.h  Fastqs.cpp  Fastqs.h  FileIO.h  ZstdUtil.h  compress_ctx.h  h_atomic.c  h_atomic.h  hash.h
redis_source_annotation-master/redis-3.2.8/src/quip/src/: Fastq_fastp.cpp  Fastq_fastp.h  config.h  fastqfmt.c  quip.c  quip.h  quiplib.c  seqmap.c  test_quip.cpp  version.h
redis_source_annotation-master/redis-3.2.8/src/quip/src/.deps/: ac.Po  assembler.Po  bloom.Po  crc64.Po  dist.Po  fastqfmt.Po  idenc.Po  kmer.Po  kmerhash.Po  misc.Po  qualenc.Po  quip.Po  quipfmt.Po  quiplib.Po  samfmt.Po  samopt.Po  seqenc.Po  seqmap.Po  strmap.Po  twobit.Po
redis_source_annotation-master/redis-3.2.8/src/quip/src/sam/.deps/: bam.Po  bam_aux.Po  bam_import.Po  bgzf.Po  kstring.Po  sam.Po  sam_header.Po
redis_source_annotation-master/redis-3.2.8/src/quip/test_fqc/: main.cpp  test_compressor.cpp  test_dna_compress.cpp  test_fq_compress.cpp
